# Hardware-Certification-Suite

./: .gitignore  CRITICAL.md  Changelog.md  DevelopmentPlan.md  README.md  ROADMAP.md  TODO.md  automated.yml  hcs-runner.example.yml  pyproject.toml  requirements-runner.txt  tests-isv-mariadb-known-bug-01.txt  vars.yml  xsub-development-plan.md
.github/scripts/: check-shell-syntax.sh  validate-yaml.py
.github/workflows/: ansible.yml  build.yml  ci.yml  python.yml
docs/: runner.md  sig-certification-discussion-reference.md
hcs/: __init__.py  __main__.py  config.py  identity.py  preflight.py  presets.py  privacy.py  profiles.py  report_pdf.py  result_contract.py  runner.py  submission.py
hcs/schemas/: config.requested.schema.json  run.summary.schema.json  step-result.schema.json  submission.manifest.schema.json
tests/: test_hcs_accelerator_guardrails.py  test_hcs_config.py  test_hcs_identity.py  test_hcs_preflight.py  test_hcs_presets.py  test_hcs_privacy.py  test_hcs_report_pdf.py  test_hcs_result_contract.py  test_hcs_runner.py  test_hcs_schemas.py  test_hcs_submission.py
tests/ISV-MariaDB/: README.md  run_test.sh
tests/ISV-MariaDB/roles/: main.yml
tests/ai_llm/: README.md  run_test.sh
tests/ai_llm/roles/: main.yml
tests/cllimits/roles/: main.yml
tests/containers/: run_test.sh
tests/containers/roles/: main.yml
tests/cpu/: run_test.sh
tests/cpu/roles/: main.yml
tests/gpu_burn/: README.md  run_test.sh
tests/hw_detection/: README.md  run_test.sh
tests/ltp/: run_test.sh
tests/network/: run_test.sh
tests/raid/: run_test.sh
(+8 files in other folders)
