[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "hcs-runner"
description = "AlmaLinux Hardware Certification Suite runner"
readme = "README.md"
requires-python = ">=3.9"
authors = [{ name = "Pawel Suchanecki", email = "subdcc@gmail.com" }]
dynamic = ["version"]
dependencies = [
    "rich>=13.7,<14",
    "PyYAML>=6.0",
    "reportlab>=4,<5",
]

[project.scripts]
hcs = "hcs.__main__:main"

[tool.setuptools]
packages = ["hcs"]

[tool.setuptools.package-data]
hcs = ["assets/fonts/*.ttf", "assets/fonts/*.txt", "assets/branding/*.png"]

[tool.setuptools.dynamic]
version = { attr = "hcs.__version__" }
